# telegram-personal-assistant

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
features/: OnEditUppercase.py  OnNewMessageUppercase.py  _AbstractFeature.py  __init__.py  fix_typos.py  instant_math.py  join_messages.py  on_edit_uppercase.py  on_new_message_join.py  on_new_message_uppercase.py
main/: main.py
main/features/: _AbstractFeature.py  fix_typos.py  instant_math.py  uppercase_message.py
main/notebooks/: spellchecks.ipynb
notebooks/: spellchecks.ipynb
scripts/: build_docker_image.sh
